[v0.9.339] Creating artifacts again.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
         shell: bash
         run: |
           mkdir release
-          if [ "$RUN_OS" == "macOS" ]; then
+          if [ "$RUNNER_OS" == "macOS" ]; then
             # --- SCRIPT WITH RECURSIVE DEPENDENCY BUNDLING FOR .APP ---
             BUNDLE_SRC_PATH="build/Advancely.app"
             BUNDLE_DEST_PATH="release/Advancely.app"
