--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-12, macos-latest ]
+        os: [ ubuntu-latest, macos-13, macos-latest ]
 
     steps:
       - name: Checkout repository
@@ -45,6 +45,24 @@ jobs:
       # --- BUILD STEP ---
       - name: Build Project
         run: cmake --build build --config Release
+
+      # --- RUN EXECUTABLE (only on macOS) ---
+      - name: Run Executable Test
+        if: matrix.os == 'macos-latest'
+        run: |
+          echo "Running Advancely with --version..."
+          ./build/Advancely.app/Contents/MacOS/Advancely --version
+
+          echo "Running Advancely with arguments and capturing output..."
+          ./build/Advancely.app/Contents/MacOS/Advancely --some-arg > output.txt 2>&1
+
+      # --- UPLOAD TEST OUTPUT (only on macOS) ---
+      - name: Upload Test Output
+        if: matrix.os == 'macos-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-output-${{ matrix.os }}
+          path: output.txt
 
       # --- PACKAGING STEP (REVISED FOR MACOS) ---
       - name: Package Artifacts
@@ -158,7 +176,7 @@ jobs:
             fi
           fi
 
-      # --- ZIPPING AND UPLOADING STEP (FIXED) ---
+      # --- ZIPPING AND UPLOADING STEP ---
       - name: Set Final Archive Name
         id: set_filename
         shell: bash
