[v0.9.345] Fixed timeout command for macOS.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,11 @@ jobs:
       # --- BUILD STEP ---
       - name: Build Project
         run: cmake --build build --config Release
+          
+      # --- INSTALL TIMEOUT COMMAND (macOS only) ---
+      - name: Install gtimeout (GNU Coreutils)
+        if: runner.os == 'macOS'
+        run: brew install coreutils
 
       # --- RUN EXECUTABLE (All OSes) ---
       - name: Run Executable Test
