--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -290,8 +290,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Configure CMake to get version # <-- ADD THIS STEP
-        run: cmake -B build -DCMAKE_PREFIX_PATH=$(brew --prefix) # <-- AND THIS ONE
+      - name: Install dependencies (macOS)
+        run: brew install sdl3 sdl3_image sdl3_ttf curl jpeg-xl webp
+      - name: Configure CMake to get version
+        run: cmake -B build -DCMAKE_PREFIX_PATH=$(brew --prefix)
       - name: Download Universal macOS Artifact
         uses: actions/download-artifact@v4
         with:
