--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -242,9 +242,6 @@ jobs:
             "$INTEL_APP_PATH/Contents/MacOS/Advancely" \
             "$ARM_APP_PATH/Contents/MacOS/Advancely"
           
-          # Add execute permission to the new universal binary
-          chmod +x "$UNIVERSAL_APP_PATH/Contents/MacOS/Advancely"
-          
           echo "Creating universal libraries..."
           ARM_LIBS_DIR="$UNIVERSAL_APP_PATH/Contents/MacOS"
           INTEL_LIBS_DIR="$INTEL_APP_PATH/Contents/MacOS"
@@ -263,6 +260,13 @@ jobs:
           echo "Codesigning final application..."
           codesign --force --sign - "$UNIVERSAL_APP_PATH/Contents/MacOS/"*.dylib
           codesign --force --deep --sign - "$UNIVERSAL_APP_PATH"
+          
+          # Set execute permission AFTER codesigning
+          chmod +x "$UNIVERSAL_APP_PATH/Contents/MacOS/Advancely"
+          
+          # Debug permissions before uploading
+          echo "Verifying permissions before upload:"
+          ls -l "$UNIVERSAL_APP_PATH/Contents/MacOS/Advancely"
       - name: Assemble Final Release Package
         shell: bash
         run: |
@@ -306,6 +310,10 @@ jobs:
         run: brew install coreutils
       - name: Run Executable Test (macOS Universal)
         run: |
+          # Add this line to debug permissions after downloading
+          echo "Verifying permissions after download:"
+          ls -l ./universal-build/Advancely.app/Contents/MacOS/Advancely
+          
           echo "Running universal executable for 5 seconds..."
           gtimeout 5s ./universal-build/Advancely.app/Contents/MacOS/Advancely --test-mode > output.txt 2>&1 || true
           echo "Executable run finished. Contents of output.txt:"
