[v0.9.370] VERSION 360 - Forcing the unzip to replace files.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -316,7 +316,7 @@ jobs:
           # path: universal-build/ # Not needed
       # Extracting zip
       - name: Extract Zip Archive
-        run: unzip Advancely-Universal.zip
+        run: unzip -o Advancely-Universal.zip
 
       - name: Install gtimeout (GNU Coreutils)
         run: brew install coreutils
